fix: clean HibernateSequentialNumberCounterStoreTest flaky tests (#16202)
* fix: clean config

* fix: remove random string, parameterize tests

* fix: missing test dependency